feat: adicionado rota para resetar a senha do usuário refactor: refatorado um pouco do código, trocado a forma de exportação para não ter que exportar uma função por vez.
